--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -30,13 +30,13 @@ http {
 
     server {
         listen       80 default_server;
-        server_name  darpa.local;
+        server_name  cep.dev;
         return 301  https://$server_name$request_uri;
     }
 
     server {
         listen       443 ssl http2;
-        server_name  darpa.local;
+        server_name  cep.dev;
 
         charset utf-8;
 
@@ -74,7 +74,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect http://django:8000/ https://darpa.local/;
+            proxy_redirect http://django:8000/ https://cep.dev/;
         }
 
         location /ws/ {
