Updated conf files to use generic values for dev.

--- a/server/conf/rabbitmq.sample.conf
+++ b/server/conf/rabbitmq.sample.conf
@@ -3,9 +3,9 @@
 		{ loopback_users, [ ] },
 		{ tcp_listeners, [ 5672 ] },
 		{ ssl_listeners, [ ] },
-		{ default_pass, <<"D3v-Pass">> },
-		{ default_user, <<"designsafe">> },
-		{ default_vhost, <<"designsafe">> },
+		{ default_pass, <<"password">> },
+		{ default_user, <<"username">> },
+		{ default_vhost, <<"hostname">> },
 		{ hipe_compile, false }
 	] },
 	{ rabbitmq_management, [ { listener, [
@@ -13,4 +13,3 @@
 		{ ssl, false }
 	] } ] }
 ].
-
