--- a/server/conf/env_files/mysql.env
+++ b/server/conf/env_files/mysql.env
@@ -2,7 +2,7 @@
 #MYSQL
 #Use this to configure mysql container
 ###
-MYSQL_ROOT_PASSWORD=D3v-Pass
-MYSQL_DATABASE=ds_database
-MYSQL_USER=ds_user
-MYSQL_PASSWORD=D3v-Pass
+MYSQL_ROOT_PASSWORD=dev
+MYSQL_DATABASE=dev
+MYSQL_USER=dev
+MYSQL_PASSWORD=dev
