--- a/server/conf/env_files/mysql.sample.env
+++ b/server/conf/env_files/mysql.sample.env
@@ -2,7 +2,7 @@
 #MYSQL
 #Use this to configure mysql container
 ###
-MYSQL_ROOT_PASSWORD=D3v-Pass
-MYSQL_DATABASE=ds_database
-MYSQL_USER=ds_user
-MYSQL_PASSWORD=D3v-Pass
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=database
+MYSQL_USER=username
+MYSQL_PASSWORD=password
