--- a/server/conf/rabbitmq.conf
+++ b/server/conf/rabbitmq.conf
@@ -3,9 +3,9 @@
 		{ loopback_users, [ ] },
 		{ tcp_listeners, [ 5672 ] },
 		{ ssl_listeners, [ ] },
-		{ default_pass, <<"D3v-Pass">> },
-		{ default_user, <<"designsafe">> },
-		{ default_vhost, <<"designsafe">> },
+		{ default_pass, <<"dev">> },
+		{ default_user, <<"dev">> },
+		{ default_vhost, <<"dev">> },
 		{ hipe_compile, false }
 	] },
 	{ rabbitmq_management, [ { listener, [
@@ -13,4 +13,3 @@
 		{ ssl, false }
 	] } ] }
 ].
-
