Missed a docker-compose name setting. Moved readme content into top-level from server.

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -71,7 +71,7 @@ services:
     hostname: cep_nginx
 
   django:
-    image: ut-portal/portal:local
+    image: cep-portal/portal:local
     env_file: ../env_files/portal.env
     # build:
     #   context: ../../.
@@ -99,7 +99,7 @@ services:
     hostname: cep_django
 
   workers:
-    image: ut-portal/portal:local
+    image: cep-portal/portal:local
     env_file: ../env_files/portal.env
     # build:
     #   context: ../../.
