--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
-    "webpack": "^2.2.0",
+    "webpack": "^3.2.0",
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
@@ -55,6 +55,7 @@
     "modernizr": "^3.3.1",
     "ng-storage": "^0.3.2",
     "objectpath": "^1.2.1",
+    "style-loader": "^0.20.1",
     "tv4": "^1.3.0",
     "underscore": "^1.8.3"
   }
