--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -45,8 +45,8 @@ http {
         # Extra slashes matter to Agave
         merge_slashes off;
 
-        ssl_certificate             /etc/ssl/dummy.crt;
-        ssl_certificate_key         /etc/ssl/dummy.key;
+        ssl_certificate             /etc/ssl/cep.dev.crt;
+        ssl_certificate_key         /etc/ssl/cep.dev.key;
         ssl_dhparam                 /etc/ssl/dhparam.pem;
         ssl_prefer_server_ciphers   on;
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
