--- a/devops/ansible/playbooks/roles/git/tasks/main.yml
+++ b/devops/ansible/playbooks/roles/git/tasks/main.yml
@@ -1,3 +1,14 @@
+- name: Copy repo service account ssh key
+  copy: src='../../secret_files/bitbucket' dest=/root/.ssh/bitbucket
+
+- name: Set ssh key perms
+  file:
+    path: /root/.ssh/bitbucket
+    mode: 0600
+
+- name: Copy SSH config file
+  copy: src="ssh_config" dest="/root/.ssh/config"
+
 - name: Get git repo
   git:
     repo: "{{ git_repo }}"
