--- a/devops/ansible/playbooks/roles/mysql/tasks/setup-RedHat.yml
+++ b/devops/ansible/playbooks/roles/mysql/tasks/setup-RedHat.yml
@@ -1,4 +1,7 @@
 ---
+- debug:
+  msg: "{{ mysql_packages }}"
+
 - name: Ensure MySQL packages are installed.
   yum: "name={{ item }} state=installed enablerepo={{ mysql_enablerepo }}"
   with_items: "{{ mysql_packages }}"
