--- a/devops/ansible/playbooks/roles/mysql/tasks/configure.yml
+++ b/devops/ansible/playbooks/roles/mysql/tasks/configure.yml
@@ -59,7 +59,7 @@
   args:
     creates: "{{ mysql_log_error }}"
     warn: no
-  when: mysql_log == "" and mysql_log_error != ""
+  when: mysql_log != "" and mysql_log_error != ""
 
 - name: Set ownership on error log file (if configured).
   file:
@@ -68,7 +68,7 @@
     owner: mysql
     group: "{{ mysql_log_file_group }}"
     mode: 0640
-  when: mysql_log == "" and mysql_log_error != ""
+  when: mysql_log != "" and mysql_log_error != ""
 
 - name: Ensure MySQL is started and enabled on boot.
   service: "name={{ mysql_daemon }} state=started enabled={{ mysql_enabled_on_startup }}"
