--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -56,8 +56,8 @@ services:
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../nginx/gzip.conf:/etc/nginx/gzip.conf
-      - ../nginx/dummy.crt:/etc/ssl/dummy.crt
-      - ../nginx/dummy.key:/etc/ssl/dummy.key
+      - ../nginx/certificates/cep.dev.crt:/etc/ssl/cep.dev.crt
+      - ../nginx/certificates/cep.dev.key:/etc/ssl/cep.dev.key
       - ../nginx/dhparam.pem:/etc/ssl/dhparam.pem
       - ../../.:/srv/www/portal
     links:
