--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,7 +13,7 @@ django-filer==1.2.6
 django-formtools==2.0
 django-impersonate==1.1
 django-mptt==0.8.7
-django-recaptcha==1.3.1
+django-recaptcha2==1.0.3
 django-polymorphic==1.0.2
 django-sekizai==0.10.0
 django-termsandconditions==1.1.2
