--- a/server/conf/docker/docker-compose.yml
+++ b/server/conf/docker/docker-compose.yml
@@ -4,8 +4,8 @@ version: "3"
 services:
     django:
       build:
-        context: ../../.
-        dockerfile: conf/docker/Dockerfile
+        context: ../../../.
+        dockerfile: server/conf/docker/Dockerfile
       image: cep-portal/portal:local
       command: /bin/bash
       container_name: cep_django
