--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -53,19 +53,19 @@ http {
         ssl_ciphers                 "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
 
         location /media  {
-            alias /srv/www/portal/media;
+            alias /srv/www/portal/server/media;
         }
 
         # location /static {
-        #    alias /srv/www/portal/static;
+        #    alias /srv/www/portal/server/static;
         # }
 
         location /favicon.ico {
-            alias /srv/www/portal/static/favicon.ico;
+            alias /srv/www/portal/server/static/favicon.ico;
         }
 
         location /robots.txt {
-            alias /ssrv/www/portal/robots.txt;
+            alias /ssrv/www/portal/server/static/robots.txt;
         }
 
         location / {
