--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -75,6 +75,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect http://django:8000/ https://cep.dev/;
+            proxy_read_timeout 360s;
         }
 
         location /ws/ {
