--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,14 +1,23 @@
 {
+  "extends": ["eslint:recommended", "google"],
   "env": {
     "browser": true,
     "node": true,
     "es6": true,
   },
   "rules": {
-      "semi": 1
+      "semi"              : [1, "always"],
+      "consistent-return" : 2,
+      "indent"            : [1, 2],
+      "no-else-return"    : 1,
+      "space-unary-ops"   : 2 
   },
   "parserOptions": {
     "sourceType": "module",
+  },
+  "globals": {
+    "_": false,
+    "moment": false,
+    "angular": false
   }
-
 }
