--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "eslint-config-google": "^0.9.1",
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "webpack": "^3.2.0",
@@ -45,6 +46,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
+    "fsevents": "^1.2.3",
     "jasmine-core": "^2.5.2",
     "jquery": "^3.1.1",
     "karma": "^1.4.0",
@@ -54,6 +56,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "modernizr": "^3.3.1",
     "ng-storage": "^0.3.2",
+    "npm": "^6.0.0",
     "objectpath": "^1.2.1",
     "style-loader": "^0.20.1",
     "tv4": "^1.3.0",
