Add paramiko to requrements, update some plugin versions to avoid dependency errors, use pip freeze

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -110,7 +110,7 @@ services:
     dns:
       - 8.8.8.8
       - 8.8.4.4
-    command: "celery -A portal worker -l debug"
+    command: "celery -A portal worker --concurrency=2 -l debug"
     container_name: cep_workers
     hostname: cep_workers
 
