Add angular-material packages

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "eslint-config-google": "^0.9.1",
+    "elasticdump": "^3.3.7",
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "webpack": "^3.2.0",
@@ -31,8 +32,12 @@
   },
   "dependencies": {
     "angular": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-aria": "^1.6.1",
     "angular-cookies": "^1.6.6",
     "angular-drag-and-drop-lists": "^2.1.0",
+    "angular-material": "^1.1.8",
+    "angular-messages": "^1.6.1",
     "angular-sanitize": "^1.6.1",
     "angular-schema-form": "^0.8.13",
     "angular-toastr": "^2.1.1",
