I'm not sure whats going on with webpack, but 4.0+ does not seem to work with html-webpack-plugin

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -94,7 +94,7 @@ services:
       - 8.8.4.4
     #command: nohup npm --prefix=/srv/www/portal/client run-script dev 2>&1 & ./manage.py runserver 0.0.0.0:8000
     #command: ./manage.py runserver 0.0.0.0:8000
-    command: /srv/www/portal/server/bin/run-dev-server.sh
+    command: "python manage.py runserver 0.0.0.0:8000"
     container_name: cep_django
     hostname: cep_django
 
