--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "eslint-config-google": "^0.9.1",
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
-    "webpack": "^3.2.0",
+    "webpack-cli": "^2.1.3",
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
@@ -43,10 +43,10 @@
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.6.4",
     "css-loader": "^0.28.9",
+    "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
-    "fsevents": "^1.2.3",
     "html-loader": "^0.5.5",
     "jasmine-core": "^2.5.2",
     "jquery": "^3.1.1",
@@ -61,6 +61,7 @@
     "objectpath": "^1.2.1",
     "style-loader": "^0.20.1",
     "tv4": "^1.3.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^3.10.0"
   }
 }
