--- a/client/package.json
+++ b/client/package.json
@@ -19,54 +19,55 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/taccaci/portal#readme",
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "eslint-config-google": "^0.9.1",
+    "clean-webpack-plugin": "^0.1.19",
     "elasticdump": "^3.3.7",
+    "eslint-config-google": "^0.9.1",
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
-    "webpack-cli": "^2.1.3",
+    "ngtemplate-loader": "^2.0.1",
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
-    "angular": "^1.6.1",
-    "angular-animate": "^1.6.1",
-    "angular-aria": "^1.6.1",
-    "angular-cookies": "^1.6.6",
+    "angular": "^1.6.10",
+    "angular-animate": "^1.6.10",
+    "angular-aria": "^1.6.10",
+    "angular-cookies": "^1.6.0",
     "angular-drag-and-drop-lists": "^2.1.0",
-    "angular-material": "^1.1.8",
+    "angular-material": "^1.1.9",
     "angular-messages": "^1.6.1",
-    "angular-sanitize": "^1.6.1",
+    "angular-sanitize": "^1.6.10",
     "angular-schema-form": "^0.8.13",
     "angular-toastr": "^2.1.1",
-    "angular-translate": "^2.15.2",
+    "angular-translate": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^1.0.3",
     "angular-xeditable": "^0.8.0",
     "bootstrap": "^3.3.7",
-    "bootstrap-datepicker": "^1.6.4",
-    "css-loader": "^0.28.9",
+    "bootstrap-datepicker": "^1.8.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
-    "jasmine-core": "^2.5.2",
+    "jasmine-core": "^2.99.1",
     "jquery": "^3.1.1",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "modernizr": "^3.3.1",
+    "modernizr": "^3.6.0",
     "ng-storage": "^0.3.2",
     "npm": "^6.0.0",
     "objectpath": "^1.2.1",
-    "style-loader": "^0.20.1",
+    "style-loader": "^0.20.3",
     "tv4": "^1.3.0",
-    "underscore": "^1.8.3",
-    "webpack": "^3.12.0"
+    "underscore": "^1.9.0",
+    "webpack": "^3.12.0",
+    "webpack-cli": "^2.1.3"
   }
 }
