--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,6 +26,7 @@ django-recaptcha2==1.0.3
 django-polymorphic==1.0.2
 django-recaptcha==1.3.1
 django-sekizai==0.10.0
+django-settings-export==1.2.1
 django-termsandconditions==1.1.2
 django-treebeard==4.1.0
 django-websocket-redis==0.5.1
