--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^2.30.1",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "ngtemplate-loader": "^2.0.1",
+    "url-loader": "^1.0.1",
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
@@ -44,23 +45,26 @@
     "angular-translate": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^1.0.3",
+    "angular-websocket": "github:jacek-jaskolski/angular-websocket",
     "angular-xeditable": "^0.8.0",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.8.0",
     "css-loader": "^0.28.11",
+    "d3": "^5.4.0",
     "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "jasmine-core": "^2.99.1",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "modernizr": "^3.6.0",
+    "moment": "^2.22.1",
     "ng-storage": "^0.3.2",
     "npm": "^6.0.0",
     "objectpath": "^1.2.1",
