--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,21 +1,20 @@
 {
   "env": {
     "browser": true,
-    "node": true,
     "es6": true,
+    "node": true
   },
   "rules": {
       "semi"              : [1, "always"],
       "consistent-return" : 2,
       "no-else-return"    : 1,
-      "space-unary-ops"   : 2
+      "space-unary-ops"   : 2,
+      "no-undef"          : 2
   },
   "parserOptions": {
     "sourceType": "module",
   },
   "globals": {
-    "_": false,
-    "moment": false,
-    "angular": false
+    "window": true
   }
 }
