--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ut-portal",
+  "name": "core-portal",
   "version": "0.1.0",
-  "description": "UT Portal project",
+  "description": "Core Portal project",
   "main": "manage.py",
   "scripts": {
     "test": "./portal/static/vendor/node_modules/.bin/karma start karma.conf.js --single-run",
     "dev": "webpack --progress --colors --watch --config webpack.config.js",
-    "build": "webpack --display-error-details --config webpack.config.js"
+    "build": "webpack -p --display-error-details --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,13 @@
   "homepage": "https://bitbucket.org/taccaci/portal#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "elasticdump": "^3.3.7",
     "eslint-config-google": "^0.9.1",
-    "html-webpack-plugin": "^2.30.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "ngtemplate-loader": "^2.0.1",
     "url-loader": "^1.0.1",
@@ -52,7 +53,6 @@
     "css-loader": "^0.28.11",
     "d3": "^5.4.0",
     "eslint": "^4.19.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
@@ -72,6 +72,6 @@
     "tv4": "^1.3.0",
     "underscore": "^1.9.0",
     "webpack": "^3.12.0",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.4"
   }
 }
