--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "manage.py",
   "scripts": {
     "test": "./portal/static/vendor/node_modules/.bin/karma start karma.conf.js --single-run",
-    "dev": "webpack --progress --colors --watch --config webpack.config.js",
-    "build": "webpack -p --display-error-details --config webpack.config.js"
+    "dev": "webpack --env dev --progress --colors --watch --config webpack.config.js",
+    "build": "webpack -p --env prod --display-error-details --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,14 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "elasticdump": "^3.3.7",
     "eslint-config-google": "^0.9.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "ng-annotate-webpack-plugin": "^0.2.1-pre",
+    "ng-annotate-webpack-plugin": "^0.3.0",
     "ngtemplate-loader": "^2.0.1",
     "url-loader": "^1.0.1",
     "webpack-livereload-plugin": "^0.10.0"
