--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "elasticdump": "^3.3.7",
     "eslint-config-google": "^0.9.1",
+    "eslint-loader": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
