--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -48,7 +48,7 @@ gevent==1.2.1
 greenlet==0.4.12
 html5lib==0.9999999
 idna==2.6
-ipaddress==1.0.22
+#ipaddress==1.0.22
 ipdb==0.10.1
 ipython==5.1.0
 ipython-genutils==0.1.0
