--- a/client/package.json
+++ b/client/package.json
@@ -73,7 +73,6 @@
     "style-loader": "^0.20.3",
     "tv4": "^1.3.0",
     "underscore": "^1.9.0",
-    "webpack": "^3.12.0",
-    "webpack-cli": "^2.1.4"
+    "webpack": "^3.12.0"
   }
 }
