--- a/client/package.json
+++ b/client/package.json
@@ -37,14 +37,15 @@
   },
   "dependencies": {
     "angular": "=1.6.9",
-    "angular-animate": "=1.6.10",
-    "angular-aria": "=1.6.10",
+    "angular-animate": "=1.6.9",
+    "angular-aria": "=1.6.9",
     "angular-cookies": "=1.6.0",
     "angular-drag-and-drop-lists": "^2.1.0",
     "angular-material": "=1.1.9",
     "angular-messages": "=1.6.1",
-    "angular-sanitize": "=1.6.10",
+    "angular-sanitize": "=1.6.9",
     "angular-schema-form": "^0.8.13",
+    "angular-schema-form-bootstrap": "^0.2.0",
     "angular-translate": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^1.0.3",
