--- a/devops/ansible/playbooks/roles/nginx/tasks/main.yml
+++ b/devops/ansible/playbooks/roles/nginx/tasks/main.yml
@@ -8,10 +8,12 @@
   template: src=nginx.conf.j2 dest=/etc/nginx/nginx.conf
 
 - name: Copy SSL cert
-  copy: src='../../secret_files/{{nginx_cert_file}}' dest=/etc/ssl/certs/
+  copy: "src={{nginx_cert_file}}' dest=/etc/ssl/certs/"
+  when: nginx_key_file != ""
 
 - name: Copy SSL key
-  copy: src='../../secret_files/{{nginx_key_file}}' dest=/etc/ssl/certs/
+  copy: "src='{{nginx_key_file}}' dest=/etc/ssl/certs/"
+  when: nginx_key_file != ""
 
 - name: Copy gzip.conf configuration
   copy: src=gzip.conf dest=/etc/nginx/gzip.conf
