--- a/devops/ansible/playbooks/roles/project_setup/tasks/main.yml
+++ b/devops/ansible/playbooks/roles/project_setup/tasks/main.yml
@@ -70,5 +70,5 @@
 
 
 
-- name: restart uwsgi
-  service: name=uwsgi.service state=restarted enabled=yes
+# - name: restart uwsgi
+#   service: name=uwsgi.service state=restarted enabled=yes
