--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -21,6 +21,7 @@ django-classy-tags==0.8.0
 django-cms==3.5.2
 django-filer==1.2.6
 django-formtools==2.0
+django-haystack==2.6.0
 django-impersonate==1.1
 django-mptt==0.8.7
 django-recaptcha2==1.0.3
