add /var/log/portal directory

--- a/server/conf/docker/Dockerfile
+++ b/server/conf/docker/Dockerfile
@@ -26,6 +26,7 @@ RUN pip install --upgrade pip && pip install -r /tmp/requirements.txt
 
 COPY . /srv/www/portal
 #RUN mkdir -p /srv/www/project
+RUN mkdir /var/log/portal
 
 WORKDIR /srv/www/portal/server
 
