--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,7 @@ celery==4.0.2
 cffi==1.11.5
 cmsplugin-filer==1.1.3
 cookies==2.2.1
+coverage==4.5.1
 cryptography==2.2.2
 decorator==4.0.11
 Django==1.10.5
