--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -35,10 +35,12 @@ django-websocket-redis==0.5.1
 djangocms-admin-style==1.2.6.2
 djangocms-attributes-field==0.3.0
 djangocms-cascade==0.16
+djangocms-forms==0.2.5
 djangocms-file==2.0.2
 djangocms-grid==1.3.0
 djangocms-picture==2.0.5
 djangocms-text-ckeditor==3.5.0
+djangocms-style==2.0.2
 easy-thumbnails==2.3
 elasticsearch==5.4.0
 elasticsearch-dsl==5.3.0
