--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ package-lock.json
 ###############################
 # Ansible .gitignores content.
 
-/.vagrant
+.vagrant/
 /static
 Vagrantfile.local
 vagrantfile.local
