--- a/devops/Vagrantfile
+++ b/devops/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "..", "/vagrant"
 
   config.vm.provision "ansible_local" do |ansible|
-    ansible.playbook = "devops/ansible/playbooks/dev.yml"
+    ansible.playbook = "devops/ansible/playbooks/local.prep"
     ansible.install_mode = "pip"
     ansible.version = "2.2.1.0"
   end
