adding second playbook to vagrantfile

--- a/devops/Vagrantfile
+++ b/devops/Vagrantfile
@@ -12,4 +12,10 @@ Vagrant.configure("2") do |config|
     ansible.install_mode = "pip"
     ansible.version = "2.2.1.0"
   end
+
+  config.vm.provision "ansible_local" do |ansible|
+    ansible.playbook = "devops/ansible/playbooks/dev.yaml"
+    ansible.install_mode = "pip"
+    ansible.version = "2.2.1.0"
+  end
 end
