--- a/devops/Vagrantfile
+++ b/devops/Vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision "ansible_local" do |ansible|
-    ansible.playbook = "devops/ansible/playbooks/dev.yaml"
+    ansible.playbook = "devops/ansible/playbooks/dev.yml"
     ansible.install_mode = "pip"
     ansible.version = "2.2.1.0"
   end
