--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,7 +9,6 @@ billiard==3.5.0.3
 cached-property==1.3.0
 celery==4.0.2
 cffi==1.11.5
-#chardet==2.2.1
 cmsplugin-filer==1.1.3
 cookies==2.2.1
 coverage==4.5.1
@@ -18,71 +17,64 @@ decorator==4.0.11
 Django==1.10.5
 django-appconf==1.0.2
 django-bootstrap3==8.1.0
-django-classy-tags==0.8.0
-django-cms==3.5.2
-django-filer==1.2.6
+django-classy-tags>=0.7
+django-cms>=3.5,<3.6
+django-filer>=1.3
 django-formtools==2.0
 django-haystack==2.6.0
 django-impersonate==1.1
-#django-ipware==2.1.0
 django-mptt==0.8.7
 django-polymorphic==1.0.2
 django-recaptcha==1.3.1
 django-recaptcha2==1.0.3
-django-sekizai==0.10.0
+django-sekizai>=0.9
 django-settings-export==1.2.1
 django-termsandconditions==1.1.2
-django-treebeard==4.1.0
+django-treebeard>=4.0,<5.0
 django-websocket-redis==0.5.1
-djangocms-admin-style==1.2.6.2
+djangocms-admin-style>=1.2,<1.3
 djangocms-attributes-field==0.3.0
 djangocms-cascade==0.16
-djangocms-column==1.8.0
-djangocms-file==2.0.2
+djangocms-column>=1.7
+djangocms-file>=2.0,<3.0
 djangocms-forms==0.2.5
-djangocms-googlemap==1.1.1
+djangocms-googlemap>=1.1
 djangocms-grid==1.3.0
-djangocms-link==2.1.2
-djangocms-picture==2.0.5
-djangocms-snippet==2.0.0
-djangocms-style==2.0.2
-djangocms-text-ckeditor==3.5.0
-djangocms-video==2.0.4
-easy-thumbnails==2.3
+djangocms-link>=2.1
+djangocms-picture>=2.0,<3.0
+#djangocms-snippet==2.0.0
+djangocms-snippet>=2.0
+djangocms-style>=2.0
+djangocms-text-ckeditor>=3.6.0
+djangocms-video>=2.0
+easy_thumbnails
 elasticsearch==5.4.0
 elasticsearch-dsl==5.3.0
 enum34==1.1.6
-#et-xmlfile==1.0.1
 funcsigs==0.4
 future==0.16.0
 futures==3.0.5
 gevent==1.2.1
 greenlet==0.4.12
-#hashids==1.2.0
-html5lib==0.9999999
+html5lib>=0.999999,<0.99999999
 idna==2.6
-#iniparse==0.4
 ipaddress==1.0.16
 ipdb==0.7.1
 ipython==5.1.0
 ipython-genutils==0.1.0
-#jdcal==1.4
 Jinja2==2.7.3
 jsonfield==2.0.2
-#kitchen==1.1.1
 kombu==4.1.0
 MarkupSafe==1.0
 mock==1.3.0
 newrelic==3.2.0.91
-#odfpy==1.3.6
 olefile==0.45.1
-#openpyxl==2.5.4
 paramiko==2.4.1
 pathlib2==2.2.1
 pbr==1.8.1
 pexpect==4.5.0
 pickleshare==0.7.4
-Pillow==4.0.0
+Pillow>=3.0
 prompt-toolkit==1.0.15
 psycopg2==2.7.4
 ptyprocess==0.5.1
@@ -90,18 +82,12 @@ py==1.4.31
 pyasn1==0.4.2
 pycparser==2.18
 pycrypto==2.6.1
-#pycurl==7.19.0
 Pygments==2.2.0
-#pygobject==3.22.0
-#pygpgme==0.3
-#pyliblzma==0.5.3
 PyNaCl==1.2.1
 -e git+https://bitbucket.org/taccaci/pytas.git@492202b5d8dd010164996bbb76f01b46e9efb70e#egg=pytas
 pytest==2.8.3
 python-dateutil==2.4.2
-pytz==2018.4
-#pyxattr==0.5.1
-#PyYAML==3.13
+pytz
 redis==2.10.5
 requests==2.8.1
 requests-toolbelt==0.8.0
@@ -109,21 +95,12 @@ responses==0.5.0
 rt==1.0.8
 scandir==1.4
 simplegeneric==0.8.1
-#simplejson==3.16.0
-six==1.10.0
+six
 sphinx-rtd-theme==0.2.4
 suds==0.4
-#tablib==0.12.1
 traitlets==4.3.2
-#unicodecsv==0.14.1
 Unidecode==0.4.20
-#urlgrabber==3.10
 urllib3==1.21.1
-#uWSGI==2.0.17.1
-#uwsgitop==0.10
 vine==1.1.4
 wcwidth==0.1.7
 websocket-client==0.47.0
-#xlrd==1.1.0
-#xlwt==1.3.0
-#yum-metadata-parser==1.1.4
