--- a/devops/Vagrantfile
+++ b/devops/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.box = "bento/centos-7.3"
   config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 443, host: 8443
   config.vm.synced_folder "..", "/vagrant"
 
   config.vm.provision "ansible_local" do |ansible|
