--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "angular-xeditable": "^0.8.0",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.8.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.11",
     "d3": "=4.1",
     "eslint": "^4.19.1",
@@ -60,10 +61,14 @@
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
+    "leaflet": "^1.3.3",
+    "leaflet-easybutton": "^2.3.0",
     "modernizr": "^3.6.0",
     "moment": "^2.22.1",
     "ng-storage": "^0.3.2",
     "objectpath": "^1.2.1",
+    "picturefill": "^3.0.2",
+    "select2": "^4.0",
     "style-loader": "^0.20.3",
     "tv4": "^1.3.0",
     "underscore": "^1.9.0",
