--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 agavepy==0.7.0
+aldryn-forms==3.0.4
 amqp==2.2.2
 appnope==0.1.0
 asn1crypto==0.24.0
@@ -10,6 +11,9 @@ cached-property==1.3.0
 celery==4.0.2
 cffi==1.11.5
 cmsplugin-filer==1.1.3
+cmsplugin-forms-builder==1.1.1
+#cmsplugin-socialsharekit
+#cmsplugin-socialbuttons
 cookies==2.2.1
 coverage==4.5.1
 cryptography==2.2.2
@@ -34,19 +38,23 @@ django-treebeard>=4.0,<5.0
 django-websocket-redis==0.5.1
 djangocms-admin-style>=1.2,<1.3
 djangocms-attributes-field==0.3.0
+djangocms-audio
 djangocms-cascade==0.16
 djangocms-column>=1.7
+djangocms-timer>=0.2
 djangocms-file>=2.0,<3.0
 djangocms-forms==0.2.5
 djangocms-googlemap>=1.1
 djangocms-grid==1.3.0
 djangocms-link>=2.1
+djangocms-oembed>=0.5
 djangocms-picture>=2.0,<3.0
 #djangocms-snippet==2.0.0
 djangocms-snippet>=2.0
 djangocms-style>=2.0
 djangocms-text-ckeditor>=3.6.0
 djangocms-video>=2.0
+djangocms-youtube>=0.2
 easy_thumbnails
 elasticsearch==5.4.0
 elasticsearch-dsl==5.3.0
