--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -79,11 +79,27 @@ services:
       - ../../../.:/srv/www/portal
     links:
       - django:django
+      - websockets:websockets
     ports:
       - 80:80
       - 443:443
     container_name: cep_prtl_nginx
     hostname: cep_prtl_nginx
+    networks:
+      - cep_prtl_net
+
+
+  websockets:
+    image: cep-portal/portal:local
+    links:
+      - redis:redis
+    volumes:
+      - ../../../.:/srv/www/portal
+    ports:
+      - 9000:9000
+    container_name: cep_prtl_websockets
+    hostname: cep_prtl_websockets
+    command: "uwsgi --chdir /srv/www/portal/server --gevent 1000 --workers=2 --http-websockets  --http-socket=:9000 --module portal.wsgi_websocket:application"
     networks:
       - cep_prtl_net
 
@@ -102,14 +118,11 @@ services:
     ports:
       - 8000:8000
       - 5555:5555
-      - 9000:9000
     dns:
       - 8.8.8.8
       - 8.8.4.4
     stdin_open: true
     tty: true
-    #command: nohup npm --prefix=/srv/www/portal/client run-script dev 2>&1 & ./manage.py runserver 0.0.0.0:8000
-    #command: ['python', '-m', 'ipdb', './manage.py', 'runserver', '0.0.0.0:8000']
     command: ['python', './manage.py', 'runserver', '0.0.0.0:8000']
     container_name: cep_prtl_django
     hostname: cep_prtl_django
