--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -74,16 +74,18 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect http://django:8000/ https://cep.dev/;
+            #proxy_redirect http://django:8000/ https://cep.dev/;
             proxy_read_timeout 360s;
         }
 
-        location /ws/ {
+        location /ws {
+            include     /etc/nginx/uwsgi_params;
+            proxy_pass http://websockets:9000/ws;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            #proxy_pass http://uwsgi:9000/ws/;
-            proxy_pass http://django:8000/ws/;
+            proxy_redirect off;
+            proxy_read_timeout 86400;
         }
     }
 
