--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,6 @@
   },
   "dependencies": {
     "angular": "=1.6.9",
-    "angular-animate": "=1.6.9",
     "angular-aria": "=1.6.9",
     "angular-cookies": "=1.6.0",
     "angular-drag-and-drop-lists": "^2.1.0",
@@ -64,6 +63,7 @@
     "moment": "^2.22.1",
     "ng-storage": "^0.3.2",
     "objectpath": "^1.2.1",
+    "rxjs": "^6.2.2",
     "style-loader": "^0.20.3",
     "tv4": "^1.3.0",
     "underscore": "^1.9.0",
