--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Core Portal project",
   "main": "manage.py",
   "scripts": {
-    "test": "./portal/static/vendor/node_modules/.bin/karma start karma.conf.js --single-run",
+    "test": "./node_modules/.bin/karma start karma.conf.js --single-run",
     "dev": "webpack --env dev --progress --colors --watch --config webpack.config.js",
     "build": "webpack -p --env prod --display-error-details --config webpack.config.js"
   },
@@ -19,6 +19,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/taccaci/portal#readme",
   "devDependencies": {
+    "angular-mocks": "^1.6.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-angularjs-annotate": "^0.9.0",
@@ -30,6 +31,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-loader": "^0.1.2",
+    "karma": "^3.0.0",
+    "karma-webpack": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
     "ngtemplate-loader": "^2.0.1",
     "url-loader": "^1.0.1",
