--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
     "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-webpack": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
     "ngtemplate-loader": "^2.0.1",
