--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/taccaci/portal#readme",
   "devDependencies": {
-    "angular-mocks": "^1.6.9",
+    "angular-mocks": "=1.6.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-angularjs-annotate": "^0.9.0",
