--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "angular": "=1.6.9",
-    "angular-animate": "^1.7.3",
+    "angular-animate": "=1.6.9",
     "angular-aria": "=1.6.9",
     "angular-cookies": "=1.6.0",
     "angular-drag-and-drop-lists": "^2.1.0",
