--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -17,7 +17,7 @@ services:
   rabbitmq:
     image: rabbitmq:3.6.10-management
     volumes:
-      - cep_prtl_rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@des_rabbitmq
+      - cep_prtl_rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@cep_prtl_rabbitmq
     env_file: ../env_files/rabbitmq.env
     ports:
       - 5672:5672
