--- a/devops/vagrant/Vagrantfile
+++ b/devops/vagrant/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 443, host: 8443
   config.vm.network "forwarded_port", guest: 9200, host: 9200
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "../../", "/vagrant", mount_options: ["uid=106,gid=111"]
+  config.vm.synced_folder "../../", "/vagrant", mount_options: ["uid=106,gid=111,dmode=775,fmode=664"]
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
